rds/security_groups.tf
resource "aws_security_group" "sg_c" {
  vpc_id = aws_vpc.main_vpc.id
  name   = "sg-rds"

  # Inbound MySQL and HTTP traffic from EKS Cluster
  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/24"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/24"]
  }

  # Outbound rules for RDS (allow all traffic out)
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
